hphp/test/slow/parser/hh-namespace-conflict-5.php.expectf
Fatal error: Cannot use `Foo\string` as `string` because the name is already in use in %s on line 4
